--- a/requirements.txt
+++ b/requirements.txt
@@ -4,27 +4,21 @@ pydantic==2.11.7
 pydantic-settings==2.10.1
 python-dotenv==1.1.1
 
-# LangChain Core
+# LangChain Core and Integrations
 langchain==0.3.27
 langchain-core==0.3.72
 langchain-text-splitters==0.3.9
 langchain-experimental # For SemanticChunker
-
-# Google Generative AI (Gemini)
 langchain-google-genai==2.0.10
-google-generativeai==0.8.5
-google-ai-generativelanguage==0.6.15
-google-api-core==2.25.1
-google-api-python-client==2.177.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-googleapis-common-protos==1.70.0
-grpcio==1.74.0
-grpcio-status==1.71.2
-
-# Pinecone Vector Database
 langchain-pinecone==0.2.11
-pinecone==7.3.0
+
+# Google Generative AI (Gemini) - Core Libraries
+google-generativeai==0.8.5
+google-api-core==2.25.1
+google-auth==2.40.3
+grpcio==1.74.0
+
+# Pinecone Client
 pinecone-client==6.0.0
 
 # Document Parsing
@@ -33,64 +27,34 @@ python-docx==1.2.0
 docx2txt==0.9
 requests==2.32.3 # For downloading PDFs from URLs
 
-# Reranking
+# Reranking (Sentence Transformers)
 sentence-transformers==5.0.0
-torch==2.7.1 # Required by sentence-transformers
-numpy==2.2.5 # Required by sentence-transformers
+torch==2.7.1 # Essential for sentence-transformers
+numpy==2.2.5 # Essential for sentence-transformers
+transformers==4.54.1 # Essential for sentence-transformers
 
 # Database (PostgreSQL)
 sqlalchemy==2.0.41
 psycopg2-binary==2.9.10
 
-# Async/HTTP Client Utilities (Transitive, but good to explicitly list if issues arise)
-aiohttp==3.12.15
-aiohttp-retry==2.9.1
-aiosignal==1.4.0
-anyio==4.9.0
-attrs==25.3.0
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-frozenlist==1.7.0
-h11==0.16.0
-httpcore==1.0.9
-httplib2==0.22.0
+# Essential HTTP/Async Dependencies (often pulled in by others)
 httpx==0.28.1
-huggingface-hub==0.34.3
-idna==3.10
-jiter==0.10.0
-joblib==1.5.1
-jsonschema==4.25.0
-jsonschema-specifications==2025.4.1
-markdown-it-py==3.0.0
-mdurl==0.1.2
-multidict==6.6.3
-orjson==3.11.0
-packaging==24.2
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic_core==2.33.2
-referencing==0.36.2
-regex==2025.7.34
-rich==14.1.0 # For nicer console logs, optional but harmless
-rpds-py==0.26.0
-rsa==4.9.1
-safetensors==0.5.3
-setuptools==80.0.1
-six==1.17.0
+httpcore==1.0.9
+anyio==4.9.0
 sniffio==1.3.1
 starlette==0.47.2
-tenacity==9.1.2 # For API call retries
-tiktoken==0.9.0
-tokenizers==0.21.4
-tqdm==4.67.1 # For progress bars, optional
-transformers==4.54.1 # Required by sentence-transformers
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-uritemplate==4.2.0
+aiohttp==3.12.15 # For requests/async operations
+yarl==1.20.1 # Aiohttp dependency
+multidict==6.6.3 # Aiohttp dependency
+frozenlist==1.7.0 # Aiohttp dependency
+aiosignal==1.4.0 # Aiohttp dependency
+aiohttp-retry==2.9.1 # Aiohttp dependency
+
+# Other core utilities (minimal set)
+certifi==2025.4.26
+charset-normalizer==3.4.1
+idna==3.10
 urllib3==2.4.0
-wrapt==1.17.2
-yarl==1.20.1
-zstandard==0.23.0
+packaging==24.2
+typing_extensions==4.14.1
+tenacity==9.1.2 # For API call retries
