--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,29 @@
-fastapi==0.116.1
-uvicorn==0.35.0
-pydantic==2.11.7
-pydantic-settings==2.10.1
-python-dotenv==1.1.1
+# FastAPI and ASGI server
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
 
-# LangChain Core and Integrations
-langchain==0.3.27
-langchain-core==0.3.72
-langchain-text-splitters==0.3.9
-langchain-experimental # For SemanticChunker
-langchain-google-genai==2.0.10
-langchain-pinecone==0.2.11
+# Pydantic for data validation
+pydantic==2.5.0
+pydantic-settings==2.1.0
 
-# Google Generative AI (Gemini) - Core Libraries
-google-generativeai==0.8.5
-google-api-core==2.25.1
-google-auth==2.40.3
-grpcio==1.74.0
+# LangChain components
+langchain==0.1.0
+langchain-core==0.1.10
+langchain-google-genai==0.0.6
+langchain-pinecone==0.0.1
+langchain-community==0.0.10
 
-# Pinecone Client
-pinecone-client==6.0.0
+# Google Generative AI
+google-generativeai==0.3.2
 
-# Document Parsing
-pypdf==5.9.0
-python-docx==1.2.0
-docx2txt==0.9
-requests==2.32.3 # For downloading PDFs from URLs
+# Vector database
+pinecone-client==2.2.4
 
-# Reranking (Sentence Transformers)
-sentence-transformers==5.0.0
-torch==2.7.1 # Essential for sentence-transformers
-numpy==2.2.5 # Essential for sentence-transformers
-transformers==4.54.1 # Essential for sentence-transformers
+# Document parsing
+pypdf==3.17.4
+docx2txt==0.8
+requests==2.31.0
 
-# Database (PostgreSQL)
-sqlalchemy==2.0.41
-psycopg2-binary==2.9.10
-
-# Essential HTTP/Async Dependencies (often pulled in by others)
-httpx==0.28.1
-httpcore==1.0.9
-anyio==4.9.0
-sniffio==1.3.1
-starlette==0.47.2
-aiohttp==3.12.15 # For requests/async operations
-yarl==1.20.1 # Aiohttp dependency
-multidict==6.6.3 # Aiohttp dependency
-frozenlist==1.7.0 # Aiohttp dependency
-aiosignal==1.4.0 # Aiohttp dependency
-aiohttp-retry==2.9.1 # Aiohttp dependency
-
-# Other core utilities (minimal set)
-certifi==2025.4.26
-charset-normalizer==3.4.1
-idna==3.10
-urllib3==2.4.0
-packaging==24.2
-typing_extensions==4.14.1
-tenacity==9.1.2 # For API call retries
+# Additional utilities
+python-multipart==0.0.6
+python-dotenv==1.0.0
