--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ langchain-community==0.0.10
 google-generativeai==0.3.2
 
 # Vector database
-pinecone-client==2.2.4
+pinecone-client>=3.0.0
 
 # Document parsing
 pypdf==3.17.4
